--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "php-ai/php-ml": "^0.10.0",
+        "spatie/laravel-data": "^3.10",
+        "web64/laravel-nlp": "^0.40.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
